--- a/index.css
+++ b/index.css
@@ -28,16 +28,25 @@
     padding: 10px;
 }
 
+.res-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .res-card {
+    margin: 5px;
     width: 200px;
-    height: 300px;
-    border: 1px solid black;
+    height: 360px;
     background-color: #f0f0f0;
     padding: 5px;
 }
 
+.res-card:hover {
+    cursor: pointer;
+    border: 1px solid black;
+}
+
 .res-logo {
-    /* height: 50%; */
     width: 100%;
 }
 
