--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@
 .res-card {
     margin: 5px;
     width: 200px;
-    height: 360px;
+    height: 380px;
     background-color: #f0f0f0;
     padding: 5px;
 }
@@ -52,4 +52,9 @@
 
 .search {
     padding: 10px;
+}
+
+.filter-btn {
+    margin: 10px;
+    cursor: pointer;
 }
