--- a/index.css
+++ b/index.css
@@ -34,9 +34,9 @@
 }
 
 .res-card {
-    margin: 5px;
-    width: 200px;
-    height: 380px;
+    margin: 10px;
+    width: 235px;
+    height: auto;
     background-color: #f0f0f0;
     padding: 5px;
 }
