--- a/index.css
+++ b/index.css
@@ -58,3 +58,15 @@
     margin: 10px;
     cursor: pointer;
 }
+
+.shimmer-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.shimmer-card {
+    width: 235px;
+    height: 400px;
+    margin: 10px;
+    background-color: #f0f0f0;
+}
