--- a/index.css
+++ b/index.css
@@ -70,3 +70,26 @@
     margin: 10px;
     background-color: #f0f0f0;
 }
+
+.login-btn {
+    padding: 10px 20px;
+    margin-left: 5px;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 120px;
+    background-color:  #ff5722;;
+    color: white;
+    border: none;
+    font-size: 16px;
+    transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.login-btn:hover {
+    background-color: #0056b3; /* Darker blue on hover */
+    transform: scale(1.05); /* Slightly increase size on hover */
+}
+
+.login-btn:active {
+    background-color: #003d80; /* Even darker blue on active click */
+    transform: scale(0.98); /* Slightly reduce size on click */
+}
