--- a/index.css
+++ b/index.css
@@ -1,104 +1,3 @@
-.header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid black;
-    height: 120px;
-}
-
-.logo-container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.logo-container img {
-    height: 100%;
-    width: auto;
-}
-
-.nav-items > ul {
-    display: flex;
-    list-style-type: none;
-    margin-right: 10px;
-    font-size: 24px;
-}
-
-.nav-items >ul > li {
-    padding: 10px;
-}
-
-.res-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.res-card {
-    margin: 10px;
-    width: 235px;
-    height: auto;
-    background-color: #f0f0f0;
-    padding: 5px;
-}
-
-.res-card:hover {
-    cursor: pointer;
-    border: 1px solid black;
-}
-
-.res-logo {
-    width: 100%;
-}
-
-.search {
-    padding: 10px;
-}
-
-.filter {
-    display: flex;
-}
-
-.filter-btn {
-    margin: 10px;
-    cursor: pointer;
-}
-
-.shimmer-container {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.shimmer-card {
-    width: 235px;
-    height: 400px;
-    margin: 10px;
-    background-color: #f0f0f0;
-}
-
-.login-btn {
-    padding: 10px 20px;
-    margin-left: 5px;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 120px;
-    background-color:  #ff5722;;
-    color: white;
-    border: none;
-    font-size: 16px;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-}
-
-.login-btn:hover {
-    background-color: #0056b3; /* Darker blue on hover */
-    transform: scale(1.05); /* Slightly increase size on hover */
-}
-
-.login-btn:active {
-    background-color: #003d80; /* Even darker blue on active click */
-    transform: scale(0.98); /* Slightly reduce size on click */
-}
-
-.user-card {
-    padding: 10px;
-    border: 1px solid black;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
